--- a/estilo.css
+++ b/estilo.css
@@ -8,6 +8,12 @@
     {
         height: 250px;
     }
+    #borda_forms {
+
+        right: 5px;
+        width: 20%;
+        margin-left: 35%;
+    }
     #car-banner
     {
         margin-top: 1%;
@@ -15,7 +21,6 @@
         margin-left: 15%;
         padding-left: 5%;
         padding-right: 5%;
-        background-color: #88be8d;
     }
     .flex_wrap
     {
@@ -52,7 +57,6 @@
         margin-left: 25%;
         padding-left: 10%;
         padding-right: 10%;
-        background-color: #88be8d;
     }
     #conteudo-tablet .card
     {
@@ -134,4 +138,53 @@ footer
   }
 header{
     background-color: #4F6F52;
+}
+#ind
+{ margin-top: -18px;
+    background-color: #F1F0E8;
+}
+footer .central
+{
+    margin-top: 0px;
+}
+.caixa {
+    z-index: -1;
+    margin-left: 10px;
+    margin-right: -5px;
+    height: auto;
+    margin-top: -40px;
+}
+#entrar_em_contato {
+    text-align: center;
+    font-size: 25px;
+    background-color: #cfcfcf;
+    margin-top: 50px;
+    margin-left: -2px;
+    margin-right: -2px;
+    padding-top: 20px;
+    padding-left: 20px;
+    border-radius: 20px;
+    color: purple;
+    font-weight: bold;
+    padding-bottom: 30px;
+    width: 80%;
+}
+#entrar_em_contato input {
+    width: 200px;
+    height: 40px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 20px;
+}
+#entrar_em_contato a {
+    background-color: #7eb3e2;
+    padding: 10px;
+    color: purple;
+    border-radius: 10px;
+    transition: background-color 0.6s ease-in-out, color 0.6s ease-in-out;
+}   
+.quem .card-img-top
+{
+    height: 400px;
 }
